--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,13 +63,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "pd.Series(lst)\n"
    ]
   },
   {
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +92,13 @@
        "74.4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "pd.Series(lst)[2]\n"
    ]
   },
   {
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,11 +128,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0     1     2     3     4\n",
+      "0  53.1  95.0  67.5  35.0  78.4\n",
+      "1  61.3  40.8  30.8  37.8  87.6\n",
+      "2  20.6  73.2  44.2  14.6  91.8\n",
+      "3  57.4   0.1  96.1   4.2  69.5\n",
+      "4  83.6  20.5  85.4  22.8  35.9\n",
+      "5  49.0  69.0   0.1  31.8  89.1\n",
+      "6  23.3  40.7  95.0  83.8  26.9\n",
+      "7  27.6  26.4  53.8  88.8  68.5\n",
+      "8  96.6  96.4  53.4  72.4  50.1\n",
+      "9  73.7  39.0  43.2  81.6  34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# pandas.DataFrame(data=None, \n",
+    "#index=None, columns=None, dtype=None, copy=False)\n",
+    "\n",
+    "df=pd.DataFrame(b)\n",
+    "print(df)"
    ]
   },
   {
@@ -143,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,143 +175,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Score_1</th>\n",
-       "      <th>Score_2</th>\n",
-       "      <th>Score_3</th>\n",
-       "      <th>Score_4</th>\n",
-       "      <th>Score_5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>53.1</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>67.5</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>78.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>61.3</td>\n",
-       "      <td>40.8</td>\n",
-       "      <td>30.8</td>\n",
-       "      <td>37.8</td>\n",
-       "      <td>87.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20.6</td>\n",
-       "      <td>73.2</td>\n",
-       "      <td>44.2</td>\n",
-       "      <td>14.6</td>\n",
-       "      <td>91.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>57.4</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>69.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>83.6</td>\n",
-       "      <td>20.5</td>\n",
-       "      <td>85.4</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>35.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>49.0</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>31.8</td>\n",
-       "      <td>89.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>23.3</td>\n",
-       "      <td>40.7</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>83.8</td>\n",
-       "      <td>26.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>27.6</td>\n",
-       "      <td>26.4</td>\n",
-       "      <td>53.8</td>\n",
-       "      <td>88.8</td>\n",
-       "      <td>68.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>96.6</td>\n",
-       "      <td>96.4</td>\n",
-       "      <td>53.4</td>\n",
-       "      <td>72.4</td>\n",
-       "      <td>50.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>73.7</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>43.2</td>\n",
-       "      <td>81.6</td>\n",
-       "      <td>34.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
-       "0     53.1     95.0     67.5     35.0     78.4\n",
-       "1     61.3     40.8     30.8     37.8     87.6\n",
-       "2     20.6     73.2     44.2     14.6     91.8\n",
-       "3     57.4      0.1     96.1      4.2     69.5\n",
-       "4     83.6     20.5     85.4     22.8     35.9\n",
-       "5     49.0     69.0      0.1     31.8     89.1\n",
-       "6     23.3     40.7     95.0     83.8     26.9\n",
-       "7     27.6     26.4     53.8     88.8     68.5\n",
-       "8     96.6     96.4     53.4     72.4     50.1\n",
-       "9     73.7     39.0     43.2     81.6     34.7"
+       "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "list(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.columns = colnames\n",
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+      "0     53.1     95.0     67.5     35.0     78.4\n",
+      "1     61.3     40.8     30.8     37.8     87.6\n",
+      "2     20.6     73.2     44.2     14.6     91.8\n",
+      "3     57.4      0.1     96.1      4.2     69.5\n",
+      "4     83.6     20.5     85.4     22.8     35.9\n",
+      "5     49.0     69.0      0.1     31.8     89.1\n",
+      "6     23.3     40.7     95.0     83.8     26.9\n",
+      "7     27.6     26.4     53.8     88.8     68.5\n",
+      "8     96.6     96.4     53.4     72.4     50.1\n",
+      "9     73.7     39.0     43.2     81.6     34.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)"
    ]
   },
   {
@@ -300,121 +247,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Score_1</th>\n",
-       "      <th>Score_3</th>\n",
-       "      <th>Score_5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>53.1</td>\n",
-       "      <td>67.5</td>\n",
-       "      <td>78.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>61.3</td>\n",
-       "      <td>30.8</td>\n",
-       "      <td>87.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20.6</td>\n",
-       "      <td>44.2</td>\n",
-       "      <td>91.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>57.4</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>69.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>83.6</td>\n",
-       "      <td>85.4</td>\n",
-       "      <td>35.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>49.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>89.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>23.3</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>26.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>27.6</td>\n",
-       "      <td>53.8</td>\n",
-       "      <td>68.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>96.6</td>\n",
-       "      <td>53.4</td>\n",
-       "      <td>50.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>73.7</td>\n",
-       "      <td>43.2</td>\n",
-       "      <td>34.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Score_1  Score_3  Score_5\n",
-       "0     53.1     67.5     78.4\n",
-       "1     61.3     30.8     87.6\n",
-       "2     20.6     44.2     91.8\n",
-       "3     57.4     96.1     69.5\n",
-       "4     83.6     85.4     35.9\n",
-       "5     49.0      0.1     89.1\n",
-       "6     23.3     95.0     26.9\n",
-       "7     27.6     53.8     68.5\n",
-       "8     96.6     53.4     50.1\n",
-       "9     73.7     43.2     34.7"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_3  Score_5\n",
+      "0     53.1     67.5     78.4\n",
+      "1     61.3     30.8     87.6\n",
+      "2     20.6     44.2     91.8\n",
+      "3     57.4     96.1     69.5\n",
+      "4     83.6     85.4     35.9\n",
+      "5     49.0      0.1     89.1\n",
+      "6     23.3     95.0     26.9\n",
+      "7     27.6     53.8     68.5\n",
+      "8     96.6     53.4     50.1\n",
+      "9     73.7     43.2     34.7\n"
+     ]
     }
    ],
    "source": [
-    "# your code here\n"
+    "df2 = df[[\"Score_1\",\"Score_3\",\"Score_5\"]]\n",
+    "print(df2)"
    ]
   },
   {
@@ -426,7 +282,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    67.5\n",
+       "1    30.8\n",
+       "2    44.2\n",
+       "3    96.1\n",
+       "4    85.4\n",
+       "5     0.1\n",
+       "6    95.0\n",
+       "7    53.8\n",
+       "8    53.4\n",
+       "9    43.2\n",
+       "Name: Score_3, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Score_3\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -435,13 +321,13 @@
        "56.95000000000001"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "df[\"Score_3\"].mean()\n"
    ]
   },
   {
@@ -453,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -462,13 +348,13 @@
        "88.8"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "df[\"Score_4\"].max()"
    ]
   },
   {
@@ -480,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -489,13 +375,13 @@
        "40.75"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "df[\"Score_2\"].median()\n"
    ]
   },
   {
@@ -507,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -647,13 +533,34 @@
        "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "products =pd.DataFrame(orders)\n",
+    "products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(products)"
    ]
   },
   {
@@ -665,7 +572,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_quantity_orders = products[\"Quantity\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_revenue = products[\"Revenue\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +603,7 @@
     }
    ],
    "source": [
-    "# your code here\n"
+    "print(f\"Total quantity is: {total_quantity_orders}\\nTotal Revenue is: {total_revenue}\" )\n"
    ]
   },
   {
@@ -686,6 +611,15 @@
    "metadata": {},
    "source": [
     "#### 12. Obtain the prices of the most expensive and least expensive items ordered and print the difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products[]"
    ]
   },
   {
@@ -759,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
