--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -615,11 +615,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1.65\n",
+       "1     0.55\n",
+       "2     1.65\n",
+       "3     0.18\n",
+       "4     1.25\n",
+       "5     0.85\n",
+       "6    11.95\n",
+       "7     4.95\n",
+       "8     0.19\n",
+       "9     1.25\n",
+       "Name: UnitPrice, dtype: float64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "products[]"
+    "products[\"UnitPrice\"]"
    ]
   },
   {
@@ -651,7 +672,7 @@
     }
    ],
    "source": [
-    "# your code here\n"
+    "products[\"UnitPrice\"]\n"
    ]
   },
   {
