--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "74.4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "Name: Score_3, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "56.95000000000001"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "88.8"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "40.75"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -634,41 +634,9 @@
        "Name: UnitPrice, dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "products[\"UnitPrice\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prices for the most expansive items ordered:\n",
-      " 0     1.65\n",
-      "2     1.65\n",
-      "7     4.95\n",
-      "6    11.95\n",
-      "Name: UnitPrice, dtype: float64 \n",
-      "\n",
-      "\n",
-      "Prices for the least expansive items ordered:\n",
-      " 3    0.18\n",
-      "8    0.19\n",
-      "1    0.55\n",
-      "5    0.85\n",
-      "Name: UnitPrice, dtype: float64 \n",
-      "\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -677,25 +645,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(products[\"UnitPrice\"])\n",
+    "# products[\"UnitPrice\"].sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3     0.18\n",
+       "8     0.19\n",
+       "1     0.55\n",
+       "5     0.85\n",
+       "4     1.25\n",
+       "9     1.25\n",
+       "0     1.65\n",
+       "2     1.65\n",
+       "7     4.95\n",
+       "6    11.95\n",
+       "Name: UnitPrice, dtype: float64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products[\"UnitPrice\"].sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The difference between the most expansive and least expansive : [ 1.47  1.46  4.4  11.1 ]\n"
+      "Prices for the most expansive items ordered:\n",
+      "0     1.65\n",
+      "2     1.65\n",
+      "7     4.95\n",
+      "6    11.95\n",
+      "Name: UnitPrice, dtype: float64\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "#I take the first 4 elements of the Series, descending ordered\n",
+    "print(\"Prices for the most expansive items ordered:\")\n",
+    "most_expensive=products[\"UnitPrice\"].sort_values()[-4:]\n",
+    "print(most_expensive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prices for the least expansive items ordered:\n",
+      "3    0.18\n",
+      "8    0.19\n",
+      "1    0.55\n",
+      "5    0.85\n",
+      "Name: UnitPrice, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#I take the first 4 elements of the Series, ascending ordered\n",
+    "print(\"Prices for the least expansive items ordered:\")\n",
+    "cheapest = products[\"UnitPrice\"].sort_values()[0:4]\n",
+    "print(cheapest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(cheapest)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#most_expensive.sub(cheapest) I can not do it like this because\n",
+    "#the rows doesnt have the same index does not have the same inde"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     1.65\n",
+      "1     1.65\n",
+      "2     4.95\n",
+      "3    11.95\n",
+      "Name: UnitPrice, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#If I reset the index and remove the new columns index\n",
+    "cheapest= cheapest.reset_index(drop=True)\n",
+    "print(cheapest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     1.65\n",
+      "1     1.65\n",
+      "2     4.95\n",
+      "3    11.95\n",
+      "Name: UnitPrice, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_expensive=most_expensive.reset_index(drop=True)\n",
+    "print(most_expensive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#most_expensive.add(cheapest) \n",
+    "#does not work I don't know why"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#If I conver to arrays it works\n",
+    "most_expensive_arr= np.array(most_expensive)\n",
+    "cheapest_arr= np.array(cheapest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "difference = most_expensive_arr - cheapest_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The difference between the most expansive and least expansive :\n",
+      "[ 1.47  1.46  4.4  11.1 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The difference between the most expansive and least expansive :\")\n",
+    "print(difference)"
+   ]
   }
  ],
  "metadata": {
