--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -62,13 +64,14 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "pd.Series(lst)\n"
    ]
   },
   {
@@ -82,22 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "74.4"
+       "0    74.4\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "pd.Series(lst[2])"
    ]
   },
   {
@@ -109,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,32 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 5. Rename the data frame columns based on the names in the list below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -176,11 +156,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Score_1</th>\n",
-       "      <th>Score_2</th>\n",
-       "      <th>Score_3</th>\n",
-       "      <th>Score_4</th>\n",
-       "      <th>Score_5</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -269,26 +249,68 @@
        "</div>"
       ],
       "text/plain": [
-       "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
-       "0     53.1     95.0     67.5     35.0     78.4\n",
-       "1     61.3     40.8     30.8     37.8     87.6\n",
-       "2     20.6     73.2     44.2     14.6     91.8\n",
-       "3     57.4      0.1     96.1      4.2     69.5\n",
-       "4     83.6     20.5     85.4     22.8     35.9\n",
-       "5     49.0     69.0      0.1     31.8     89.1\n",
-       "6     23.3     40.7     95.0     83.8     26.9\n",
-       "7     27.6     26.4     53.8     88.8     68.5\n",
-       "8     96.6     96.4     53.4     72.4     50.1\n",
-       "9     73.7     39.0     43.2     81.6     34.7"
+       "      0     1     2     3     4\n",
+       "0  53.1  95.0  67.5  35.0  78.4\n",
+       "1  61.3  40.8  30.8  37.8  87.6\n",
+       "2  20.6  73.2  44.2  14.6  91.8\n",
+       "3  57.4   0.1  96.1   4.2  69.5\n",
+       "4  83.6  20.5  85.4  22.8  35.9\n",
+       "5  49.0  69.0   0.1  31.8  89.1\n",
+       "6  23.3  40.7  95.0  83.8  26.9\n",
+       "7  27.6  26.4  53.8  88.8  68.5\n",
+       "8  96.6  96.4  53.4  72.4  50.1\n",
+       "9  73.7  39.0  43.2  81.6  34.7"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df = pd.DataFrame(b)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Rename the data frame columns based on the names in the list below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "#conversion ={\"0\": \"Score_1\", \"1\":\"Score_2\", \"3\":\"Score_3\", \"4\": \"Score_4\", \"5\":\"Score_5\"}\n",
+    "df.columns = colnames\n",
+    "list(df.columns)\n",
+    "#df"
    ]
   },
   {
@@ -300,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -408,13 +430,15 @@
        "9     73.7     43.2     34.7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "#df[['Score_1', 'Score_3', 'Score_5']]\n",
+    "df.iloc[:, [0,2,4]]"
    ]
   },
   {
@@ -426,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -435,13 +459,14 @@
        "56.95000000000001"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df['Score_3'].mean()"
    ]
   },
   {
@@ -453,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -462,13 +487,14 @@
        "88.8"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df['Score_4'].max()"
    ]
   },
   {
@@ -480,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -489,13 +515,14 @@
        "40.75"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df['Score_2'].median()"
    ]
   },
   {
@@ -507,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -647,13 +674,15 @@
        "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df1=pd.DataFrame(orders)\n",
+    "df1"
    ]
   },
   {
@@ -665,20 +694,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total quantity is: 2978\n",
-      "Total Revenue is: 637.0\n"
+      "Total quantity ordered:  2978\n"
      ]
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "print(\"Total quantity ordered: \", df1['Quantity'].sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total revenue generated:  637.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total revenue generated: \", df1['Revenue'].sum())\n"
    ]
   },
   {
@@ -690,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -698,42 +744,117 @@
      "output_type": "stream",
      "text": [
       "Prices for the most expansive items ordered:\n",
-      " 0     1.65\n",
+      "0     1.65\n",
       "2     1.65\n",
-      "7     4.95\n",
       "6    11.95\n",
-      "Name: UnitPrice, dtype: float64 \n",
-      "\n",
-      "\n",
-      "Prices for the least expansive items ordered:\n",
-      " 3    0.18\n",
-      "8    0.19\n",
-      "1    0.55\n",
-      "5    0.85\n",
-      "Name: UnitPrice, dtype: float64 \n",
-      "\n",
-      "\n"
+      "7     4.95\n",
+      "Name: UnitPrice, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "print(\"Prices for the most expansive items ordered:\" )\n",
+    "most_expensive = (df1[df1['UnitPrice']>=1.65] ['UnitPrice'])\n",
+    "print(most_expensive)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The difference between the most expansive and least expansive : [ 1.47  1.46  4.4  11.1 ]\n"
+      "Prices for the least expansive items ordered:\n",
+      "1    0.55\n",
+      "3    0.18\n",
+      "5    0.85\n",
+      "8    0.19\n",
+      "Name: UnitPrice, dtype: float64\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(\"Prices for the least expansive items ordered:\")\n",
+    "least_expensive = df1[df1['UnitPrice']<1.0 ]['UnitPrice']\n",
+    "print(least_expensive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6    11.95\n",
+       "7     4.95\n",
+       "0     1.65\n",
+       "2     1.65\n",
+       "Name: UnitPrice, dtype: float64"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = most_expensive.sort_values(ascending = False)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5    0.85\n",
+       "1    0.55\n",
+       "8    0.19\n",
+       "3    0.18\n",
+       "Name: UnitPrice, dtype: float64"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = least_expensive.sort_values(ascending = False)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<PandasArray>\n",
+       "[11.1, 4.4, 1.46, 1.47]\n",
+       "Length: 4, dtype: float64"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.array-b.array\n",
+    "#print(difference)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -759,7 +880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
