--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 41
     }
    ],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 42
     }
    ],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 43
     }
    ],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>53.1</td>\n      <td>95.0</td>\n      <td>67.5</td>\n      <td>35.0</td>\n      <td>78.4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>61.3</td>\n      <td>40.8</td>\n      <td>30.8</td>\n      <td>37.8</td>\n      <td>87.6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20.6</td>\n      <td>73.2</td>\n      <td>44.2</td>\n      <td>14.6</td>\n      <td>91.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>57.4</td>\n      <td>0.1</td>\n      <td>96.1</td>\n      <td>4.2</td>\n      <td>69.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>83.6</td>\n      <td>20.5</td>\n      <td>85.4</td>\n      <td>22.8</td>\n      <td>35.9</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>49.0</td>\n      <td>69.0</td>\n      <td>0.1</td>\n      <td>31.8</td>\n      <td>89.1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23.3</td>\n      <td>40.7</td>\n      <td>95.0</td>\n      <td>83.8</td>\n      <td>26.9</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>27.6</td>\n      <td>26.4</td>\n      <td>53.8</td>\n      <td>88.8</td>\n      <td>68.5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>96.6</td>\n      <td>96.4</td>\n      <td>53.4</td>\n      <td>72.4</td>\n      <td>50.1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>73.7</td>\n      <td>39.0</td>\n      <td>43.2</td>\n      <td>81.6</td>\n      <td>34.7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 45
     }
    ],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 46
     }
    ],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Score_1</th>\n      <th>Score_2</th>\n      <th>Score_3</th>\n      <th>Score_4</th>\n      <th>Score_5</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>53.1</td>\n      <td>95.0</td>\n      <td>67.5</td>\n      <td>35.0</td>\n      <td>78.4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>61.3</td>\n      <td>40.8</td>\n      <td>30.8</td>\n      <td>37.8</td>\n      <td>87.6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20.6</td>\n      <td>73.2</td>\n      <td>44.2</td>\n      <td>14.6</td>\n      <td>91.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>57.4</td>\n      <td>0.1</td>\n      <td>96.1</td>\n      <td>4.2</td>\n      <td>69.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>83.6</td>\n      <td>20.5</td>\n      <td>85.4</td>\n      <td>22.8</td>\n      <td>35.9</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>49.0</td>\n      <td>69.0</td>\n      <td>0.1</td>\n      <td>31.8</td>\n      <td>89.1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23.3</td>\n      <td>40.7</td>\n      <td>95.0</td>\n      <td>83.8</td>\n      <td>26.9</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>27.6</td>\n      <td>26.4</td>\n      <td>53.8</td>\n      <td>88.8</td>\n      <td>68.5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>96.6</td>\n      <td>96.4</td>\n      <td>53.4</td>\n      <td>72.4</td>\n      <td>50.1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>73.7</td>\n      <td>39.0</td>\n      <td>43.2</td>\n      <td>81.6</td>\n      <td>34.7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 48
     }
    ],
    "source": [
@@ -256,11 +256,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Score_1  Score_3  Score_5\n",
+       "0     53.1     67.5     78.4\n",
+       "1     61.3     30.8     87.6\n",
+       "2     20.6     44.2     91.8\n",
+       "3     57.4     96.1     69.5\n",
+       "4     83.6     85.4     35.9\n",
+       "5     49.0      0.1     89.1\n",
+       "6     23.3     95.0     26.9\n",
+       "7     27.6     53.8     68.5\n",
+       "8     96.6     53.4     50.1\n",
+       "9     73.7     43.2     34.7"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Score_1</th>\n      <th>Score_3</th>\n      <th>Score_5</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>53.1</td>\n      <td>67.5</td>\n      <td>78.4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>61.3</td>\n      <td>30.8</td>\n      <td>87.6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20.6</td>\n      <td>44.2</td>\n      <td>91.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>57.4</td>\n      <td>96.1</td>\n      <td>69.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>83.6</td>\n      <td>85.4</td>\n      <td>35.9</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>49.0</td>\n      <td>0.1</td>\n      <td>89.1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23.3</td>\n      <td>95.0</td>\n      <td>26.9</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>27.6</td>\n      <td>53.8</td>\n      <td>68.5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>96.6</td>\n      <td>53.4</td>\n      <td>50.1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>73.7</td>\n      <td>43.2</td>\n      <td>34.7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
    "source": [
-    "# your code here"
+    "subset_df = pd_df[[\"Score_1\", \"Score_3\", \"Score_5\"]]\n",
+    "subset_df"
    ]
   },
   {
